2005-05-31  Reinhard Max  <max@suse.de>

	* doc/Inactive.3 (new file): C level API documentationn for
	TIP#245 (Tk_GetUserInactiveTime, Tk_ResetUserInactiveTime).
	* tests/tk.test: Added tests for the TIP#245 implementation.

2005-05-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkPanedWindow.c, tests/panedwindow.test: batch of fixes
	to panedwindow from Daniel South.  Improved auto-size to fit
	internal windows, fixed sash placement at edge of pane, fixed
	calculation of stretch amount for internal windows.
	[Bug 1124198 1161543 1054117 1010941 795869 690169 1192323]

	* generic/tkMenu.c (MenuCmd): create event handler earlier to
	ensure proper destruction of menu through DestroyNotify.
	[Bug 1159367]

	* library/console.tcl (::tk::ConsoleInit): print out first prompt
	and swallow the extra "% " that comes once from Tcl on Windows.

2005-05-29  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXFont.c: use Tcl_Panic instead of panic.
	
	* unix/configure.in: added description of HAVE_XSS for autoheader.
	* unix/configure: autoconf-2.59
	* unix/tkConfig.h.in: autoheader-2.59

	* macosx/Wish.pbproj/project.pbxproj:
	* macosx/Wish.xcode/project.pbxproj: added missing FRAMEWORK defines
	introduced with configure/make based build.

	* macosx/tkMacOSXInit.c:
	* macosx/tkMacOSXNotify.c: fixed warnings.

	* generic/tkDecls.h:
	* generic/tkIntPlatDecls.h:
	* generic/tkPlatDecls.h:
	* generic/tkStubInit.c: ran missing 'make genstubs' for TIP245 changes
	to tk.decls

	* macosx/tkMacOSXXStubs.c (Tk_ResetUserInactiveTime): use symbolic
	constant argument in call to UpdateSystemActivity();
	
	* macosx/Wish.pbproj/project.pbxproj:
	* macosx/Wish.xcode/project.pbxproj:
	* unix/configure.in: added/corrected linking to IOKit.framework for
	TIP245.
	
	* unix/configure.in: skip X11 configure checks when building tk_aqua.
	* unix/configure: autoconf-2.59

2005-05-28  Donal K. Fellows  <dkf@users.sf.net>

	TIP #245 IMPLEMENTATION from Reinhard Max <max@suse.de>
