@@ -1,3 +1,8 @@
+2005-06-01  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* win/tkWinX.c (Tk_ResetUserInactiveTime): cast to squelch
+	compiler warning.
+
 2005-05-31  Reinhard Max  <max@suse.de>
 
 	* doc/Inactive.3 (new file): C level API documentationn for
